@@ -1,0 +1,3 @@
+respond.o
+log.o
+-lbg
